# finance-rag-hybrid

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: agent.py  chain.py  eval.py  main.py  retriever.py  schemas.py
data/: eval_dataset.json
learning/: agent.py  api.py  retriever.py  schemas.py
scripts/: ingest.py
